--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name" : "Donfelice/PolygonFieldTypeBundle",
-    "description" : "eZ Platform bundle for a polygon field type to be used with mapbox as geojson.",
-    "type" : "symfony-bundle",
-    "authors" : [{
-        "name" : "Felix Laate",
-        "email" : "felix.laate@gmail.com"
-    }],
-    "keywords" : [
-        "polygon field type bundle"
+    "name": "Donfelice/PolygonFieldTypeBundle",
+    "description": "The Polygon Field Type Bundle is an eZ Platform bundle providing a field type to manage and store geosjon polygons to be used with mapbox.",
+    "type": "ezplatform-bundle",
+    "keywords": [
+        "ezplatform",
+        "donfelice",
+        "polygon"
     ],
-    "license" : [
-        "MIT"
-    ],
-    "require" : {
-    },
-    "autoload" : {
-        "psr-0" : {
-            "Donfelice\\PolygonFieldTypeBundle" : ""
+    "homepage": "https://github.com/donfelice/polygonfieldtype",
+    "license": "GPL-2.0",
+    "authors": [
+        {
+            "name": "Donfelice",
+            "homepage": ""
         }
+    ],
+    "require": {
+        "php": "^7.1",
+        "ezsystems/ezpublish-kernel": "^7.0@dev",
+        "ezsystems/ezplatform-admin-ui": "^1.0@dev",
+        "ezsystems/ezplatform-admin-ui-modules": "^1.0@dev",
+        "ezsystems/ezplatform-admin-ui-assets": "^1.0@dev"
     },
-    "target-dir" : "Donfelice/PolygonFieldTypeBundle",
-    "repositories" : [{
-    }],
-    "extra" : {
-    "branch-alias" : {
-            "dev-master" : "0.1"
+    "autoload": {
+        "psr-4": {
+            "Donfelice\\PolygonFieldTypeBundle\\": "/"
         }
     }
 }
