Updated name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "polygon"
     ],
     "homepage": "https://github.com/donfelice/polygonfieldtype",
-    "license": "GPL-2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "Donfelice",
